--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.haagh.ekspsysapp"
+    package="dani.leahele.EkspSysApp"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
-        android:targetSdkVersion="10" />
+        android:minSdkVersion="8"
+        android:targetSdkVersion="15" />
 
     <application
         android:allowBackup="true"
@@ -14,21 +14,13 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="net.haagh.ekspsysapp.MainActivity"
+            android:name="dani.leahele.EkspSysApp.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="net.haagh.ekspsysapp.CalenderActivity"
-            android:label="@string/title_activity_calender" >
-        </activity>
-        <activity
-            android:name="net.haagh.ekspsysapp.FunActivity"
-            android:label="@string/title_activity_fun" >
         </activity>
     </application>
 
