--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="dani.leahele.EkspSysApp.CalenderActivity"
+            android:label="@string/title_activity_calender" >
+        </activity>
+        <activity
+            android:name="dani.leahele.EkspSysApp.FunActivity"
+            android:label="@string/title_activity_fun" >
+        </activity>
     </application>
 
 </manifest>
