--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,12 +23,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="dani.leahele.EkspSysApp.CalenderActivity"
+            android:name="dani.leahele.EkspSysApp.Calender.CalenderActivity"
             android:label="@string/title_activity_calender" >
         </activity>
         <activity
             android:name="dani.leahele.EkspSysApp.FunActivity"
             android:label="@string/title_activity_fun" >
+        </activity>
+        <activity
+            android:name="dani.leahele.EkspSysApp.Calender.EventActivity"
+            android:label="@string/title_activity_event" >
         </activity>
     </application>
 
