--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:label="@string/title_activity_calender" >
         </activity>
         <activity
-            android:name="dani.leahele.EkspSysApp.FunActivity"
+            android:name="dani.leahele.EkspSysApp.Fun.FunActivity"
             android:label="@string/title_activity_fun" >
         </activity>
         <activity
